need to fix: title responsiveness if too long

--- a/src/App.scss
+++ b/src/App.scss
@@ -146,6 +146,7 @@ section {
 		height: 100%; right: 0;
 		background-size: cover;
 		border-radius: 11px;
+		width: 11rem;
 		}
 	}
   
